<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation">

    <fragment
        android:id="@+id/nav_home"
        android:name="fr.enseeiht.l5.easy.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_connect"
        android:name="fr.enseeiht.l5.easy.ui.connect.ConnectFragment"
        android:label="@string/menu_connect"
        tools:layout="@layout/fragment_connect" />

    <fragment
        android:id="@+id/nav_authenticate"
        android:name="fr.enseeiht.l5.easy.ui.authenticate.AuthenticateFragment"
        android:label="@string/menu_Authenticate"
        tools:layout="@layout/fragment_authenticate" />
</navigation>